# opengl-game-demo

./: .gitignore  README.md
code/: CMakeLists.txt  arrow.cpp  arrow.h  background_controller_object.cpp  background_controller_object.h  background_sprite.cpp  background_sprite.h  background_tile_object.cpp  background_tile_object.h  bullet_object.cpp  bullet_object.h  charge_enemy_object.cpp  charge_enemy_object.h  collectible_game_object.cpp  collectible_game_object.h  collision_handler.cpp  collision_handler.h  config.h  enemy_arm_object.cpp  enemy_arm_object.h  enemy_game_object.cpp  enemy_game_object.h  explosion.cpp  explosion.h  game.cpp  game.h  game_object.cpp  game_object.h  health_bar.cpp  health_bar.h  health_bar_sprite.cpp  health_bar_sprite.h  helper.cpp  helper.h  melee_enemy_object.cpp  melee_enemy_object.h  particle_fragment_shader.glsl  particle_system.cpp  particle_system.h  particle_vertex_shader.glsl  (+22 more)
